// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateTimeSelect /> 'Duration' tab matches snapshot 1`] = `
"
<ul class=\\"nav nav-tabs nav-fill\\">
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Starts
      </span>
      <span class=\\"badge badge-light\\">
        now
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Ends
      </span>
      <span class=\\"badge badge-light\\">
        in 366d
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer active\\">
      <span class=\\"mr-1\\">
        Duration
      </span>
      <span class=\\"badge badge-light\\">
        366d
      </span>
    </span>
  </li>
</ul>
<div class=\\"tab-content mb-3\\">
  <div class=\\"d-flex flex-sm-row flex-column justify-content-around mt-2 mx-3\\">
    <div class=\\"components-duration\\">
      <table class=\\"w-100\\">
        <tbody>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <h2>
                366
              </h2>
            </td>
            <td class=\\"w-50\\">
              <span class=\\"text-muted ml-2\\">
                days
              </span>
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class=\\"components-duration\\">
      <table class=\\"w-100\\">
        <tbody>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <h2>
                0
              </h2>
            </td>
            <td class=\\"w-50\\">
              <span class=\\"text-muted ml-2\\">
                hours
              </span>
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class=\\"components-duration\\">
      <table class=\\"w-100\\">
        <tbody>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <h2>
                0
              </h2>
            </td>
            <td class=\\"w-50\\">
              <span class=\\"text-muted ml-2\\">
                minutes
              </span>
            </td>
          </tr>
          <tr>
            <td class=\\"w-50 text-center\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td class=\\"w-50\\">
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
"
`;

exports[`<DateTimeSelect /> 'Ends' tab matches snapshot 1`] = `
"
<ul class=\\"nav nav-tabs nav-fill\\">
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Starts
      </span>
      <span class=\\"badge badge-light\\">
        now
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer active\\">
      <span class=\\"mr-1\\">
        Ends
      </span>
      <span class=\\"badge badge-light\\">
        in 366d
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Duration
      </span>
      <span class=\\"badge badge-light\\">
        366d
      </span>
    </span>
  </li>
</ul>
<div class=\\"tab-content mb-3\\">
  <div class=\\"d-flex flex-sm-row flex-column justify-content-around mx-3 mt-2\\">
    <div class=\\"d-flex justify-content-center align-items-center\\">
      <div>
        <div class=\\"react-datepicker\\">
          <div class=\\"react-datepicker__triangle\\">
          </div>
          <button type=\\"button\\"
                  class=\\"react-datepicker__navigation react-datepicker__navigation--previous\\"
                  aria-label=\\"Previous Month\\"
          >
            Previous Month
          </button>
          <button type=\\"button\\"
                  class=\\"react-datepicker__navigation react-datepicker__navigation--next react-datepicker__navigation--next--with-today-button\\"
                  aria-label=\\"Next Month\\"
          >
            Next Month
          </button>
          <div class=\\"react-datepicker__month-container\\">
            <div class=\\"react-datepicker__header\\">
              <div class=\\"react-datepicker__current-month\\">
                February 2061
              </div>
              <div class=\\"react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll\\">
              </div>
              <div class=\\"react-datepicker__day-names\\">
                <div class=\\"react-datepicker__day-name\\">
                  Su
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Mo
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Tu
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  We
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Th
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Fr
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Sa
                </div>
              </div>
            </div>
            <div class=\\"react-datepicker__month\\"
                 aria-label=\\"month  2061-02\\"
            >
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--030 react-datepicker__day--weekend react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, January 30th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  30
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--031 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, January 31st, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  31
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--001 react-datepicker__day--selected\\"
                     tabindex=\\"0\\"
                     aria-label=\\"Choose Tuesday, February 1st, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  1
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--002\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 2nd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  2
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--003\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 3rd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  3
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--004\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 4th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  4
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--005 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 5th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  5
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--006 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 6th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  6
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--007\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 7th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  7
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--008\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 8th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  8
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--009\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 9th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  9
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--010\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 10th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  10
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--011\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 11th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  11
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--012 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 12th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  12
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--013 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 13th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  13
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--014\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 14th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  14
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--015\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 15th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  15
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--016\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 16th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  16
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--017\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 17th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  17
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--018\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 18th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  18
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--019 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 19th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  19
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--020 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 20th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  20
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--021\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 21st, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  21
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--022\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 22nd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  22
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--023\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 23rd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  23
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--024\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 24th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  24
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--025\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 25th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  25
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--026 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 26th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  26
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--027 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 27th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  27
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--028\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 28th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  28
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--001 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, March 1st, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  1
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--002 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, March 2nd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  2
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--003 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, March 3rd, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  3
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--004 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, March 4th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  4
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--005 react-datepicker__day--weekend react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, March 5th, 2061\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  5
                </div>
              </div>
            </div>
          </div>
          <div class=\\"react-datepicker__today-button\\">
            Today
          </div>
        </div>
      </div>
    </div>
    <div class=\\"d-flex justify-content-center align-items-center components-hour-minute\\">
      <table class=\\"text-center border-0\\">
        <tbody>
          <tr>
            <td class=\\"components-hour-up\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td>
            </td>
            <td class=\\"components-minute-up\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
          </tr>
          <tr>
            <td class=\\"components-hour\\">
              <h2>
                00
              </h2>
            </td>
            <td>
              <h2 class=\\"mx-2\\">
                :
              </h2>
            </td>
            <td class=\\"components-minute\\">
              <h2>
                00
              </h2>
            </td>
          </tr>
          <tr>
            <td class=\\"components-hour-down\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td>
            </td>
            <td class=\\"components-minute-down\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
"
`;

exports[`<DateTimeSelect /> 'Starts' tab matches snapshot 1`] = `
"
<ul class=\\"nav nav-tabs nav-fill\\">
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer active\\">
      <span class=\\"mr-1\\">
        Starts
      </span>
      <span class=\\"badge badge-light\\">
        now
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Ends
      </span>
      <span class=\\"badge badge-light\\">
        in 366d
      </span>
    </span>
  </li>
  <li class=\\"nav-item\\">
    <span class=\\"nav-link cursor-pointer \\">
      <span class=\\"mr-1\\">
        Duration
      </span>
      <span class=\\"badge badge-light\\">
        366d
      </span>
    </span>
  </li>
</ul>
<div class=\\"tab-content mb-3\\">
  <div class=\\"d-flex flex-sm-row flex-column justify-content-around mx-3 mt-2\\">
    <div class=\\"d-flex justify-content-center align-items-center\\">
      <div>
        <div class=\\"react-datepicker\\">
          <div class=\\"react-datepicker__triangle\\">
          </div>
          <button type=\\"button\\"
                  class=\\"react-datepicker__navigation react-datepicker__navigation--next react-datepicker__navigation--next--with-today-button\\"
                  aria-label=\\"Next Month\\"
          >
            Next Month
          </button>
          <div class=\\"react-datepicker__month-container\\">
            <div class=\\"react-datepicker__header\\">
              <div class=\\"react-datepicker__current-month\\">
                February 2060
              </div>
              <div class=\\"react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll\\">
              </div>
              <div class=\\"react-datepicker__day-names\\">
                <div class=\\"react-datepicker__day-name\\">
                  Su
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Mo
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Tu
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  We
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Th
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Fr
                </div>
                <div class=\\"react-datepicker__day-name\\">
                  Sa
                </div>
              </div>
            </div>
            <div class=\\"react-datepicker__month\\"
                 aria-label=\\"month  2060-02\\"
            >
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--001 react-datepicker__day--selected react-datepicker__day--today react-datepicker__day--weekend\\"
                     tabindex=\\"0\\"
                     aria-label=\\"Choose Sunday, February 1st, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  1
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--002\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 2nd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  2
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--003\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 3rd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  3
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--004\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 4th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  4
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--005\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 5th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  5
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--006\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 6th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  6
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--007 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 7th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  7
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--008 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 8th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  8
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--009\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 9th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  9
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--010\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 10th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  10
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--011\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 11th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  11
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--012\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 12th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  12
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--013\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 13th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  13
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--014 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 14th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  14
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--015 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 15th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  15
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--016\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 16th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  16
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--017\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 17th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  17
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--018\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 18th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  18
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--019\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 19th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  19
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--020\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 20th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  20
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--021 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 21st, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  21
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--022 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 22nd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  22
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--023\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, February 23rd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  23
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--024\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, February 24th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  24
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--025\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, February 25th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  25
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--026\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, February 26th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  26
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--027\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, February 27th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  27
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--028 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, February 28th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  28
                </div>
              </div>
              <div class=\\"react-datepicker__week\\">
                <div class=\\"react-datepicker__day react-datepicker__day--029 react-datepicker__day--weekend\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Sunday, February 29th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  29
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--001 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Monday, March 1st, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  1
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--002 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Tuesday, March 2nd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  2
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--003 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Wednesday, March 3rd, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  3
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--004 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Thursday, March 4th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  4
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--005 react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Friday, March 5th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  5
                </div>
                <div class=\\"react-datepicker__day react-datepicker__day--006 react-datepicker__day--weekend react-datepicker__day--outside-month\\"
                     tabindex=\\"-1\\"
                     aria-label=\\"Choose Saturday, March 6th, 2060\\"
                     role=\\"button\\"
                     aria-disabled=\\"false\\"
                >
                  6
                </div>
              </div>
            </div>
          </div>
          <div class=\\"react-datepicker__today-button\\">
            Today
          </div>
        </div>
      </div>
    </div>
    <div class=\\"d-flex justify-content-center align-items-center components-hour-minute\\">
      <table class=\\"text-center border-0\\">
        <tbody>
          <tr>
            <td class=\\"components-hour-up\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td>
            </td>
            <td class=\\"components-minute-up\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-up\\"
                     class=\\"svg-inline--fa fa-angle-up fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
          </tr>
          <tr>
            <td class=\\"components-hour\\">
              <h2>
                00
              </h2>
            </td>
            <td>
              <h2 class=\\"mx-2\\">
                :
              </h2>
            </td>
            <td class=\\"components-minute\\">
              <h2>
                00
              </h2>
            </td>
          </tr>
          <tr>
            <td class=\\"components-hour-down\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
            <td>
            </td>
            <td class=\\"components-minute-down\\">
              <span>
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"angle-down\\"
                     class=\\"svg-inline--fa fa-angle-down fa-w-10 fa-2x text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 320 512\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
"
`;
